--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <title>simple test</title>
+        <meta charset="UTF-8">
     </head>
     <body>
+        <title>Hello world</title>
         hello world
     </body>
 
