--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
     </head>
     <body>
-        <title>Hello world</title>
+        <title>simple test</title>
         hello world
     </body>
 
